<resources>
    <string name="app_name">Menus</string>
    <string name="view">View</string>
    <string name="about_us">About Us</string>
    <string name="add">Add</string>
    <string name="contact_us">Contact Us</string>
    <string name="location">Location</string>
    <string name="more">More</string>
    <string name="names">Names</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
</resources>