<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/view"
    android:id="@+id/mnuView"
    android:icon="@drawable/ic_view"
    app:showAsAction="always"
    />
    <item
        android:title="@string/about_us"
        android:id="@+id/mnuAbout"
        />
    <item
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        android:id="@+id/mnuAdd"
        app:showAsAction="always"
        />
    <item
        android:title="@string/contact_us"
        android:id="@+id/mnuContact"
        />
    <item
        android:title="@string/location"
        android:id="@+id/mnuLocation"
        android:icon="@drawable/ic_location"
        app:showAsAction="always"
        />
    <item
        android:title="@string/more"
        android:id="@+id/mnMore"
        >

    </item>
</menu>