<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:id="@+id/laNames"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/names"
            android:id="@+id/etNames"
            android:inputType="textPersonName"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:id="@+id/laEmail"
        android:layout_below="@+id/laNames"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:id="@+id/laPhone"
        android:layout_below="@+id/laEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/phone"
            android:id="@+id/etPhone"
            android:inputType="phone"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>



</RelativeLayout>